--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -6,3 +6,21 @@
 body {
   background: transparent url("../images/background.png") top center !important;
 }
+
+.markdown-body {
+  background-color: #fff;
+  box-shadow: 0 0 3px #000;
+  padding: 30px 40px !important;
+}
+
+.markdown-body::after {
+  content: "";
+  background: url("../images/logo.png");
+  opacity: 0.5;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
