--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -15,12 +15,12 @@ body {
 
 .markdown-body::after {
   content: "";
-  background: url("../images/logo.png");
-  opacity: 0.5;
+  background: url("../images/logo.png") no-repeat;
+  opacity: 0.2;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   position: absolute;
-  z-index: -1;
+  z-index: 0;
 }
