--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,6 +8,7 @@ body {
 }
 
 .markdown-body {
+  position: relative;
   background-color: #fff;
   box-shadow: 0 0 3px #000;
   padding: 30px 40px !important;
