--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -15,6 +15,7 @@ body {
 }
 
 .markdown-body::after {
+  display: block;
   content: "";
   background: url("../images/logo.png") no-repeat;
   opacity: 0.2;
