--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -18,7 +18,8 @@ body {
 .markdown-body::after {
   display: block;
   content: "";
-  background: url("../images/logo.png") no-repeat 100% -40%;
+  background: url("../images/logo.png") no-repeat top right;
+  background-size: 50%;
   opacity: 0.2;
   top: 0;
   left: 0;
@@ -26,5 +27,4 @@ body {
   right: 0;
   position: absolute;
   z-index: 0;
-  background-size: 50%;
 }
