--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,12 +9,13 @@ body {
 }
 
 .markdown-body {
-  position: relative;
+  /*position: relative;*/
   background-color: #fff;
   box-shadow: 0 0 3px #000;
   padding: 30px 40px !important;
 }
 
+/*
 .markdown-body::after {
   display: block;
   content: "";
@@ -28,3 +29,4 @@ body {
   position: absolute;
   z-index: 0;
 }
+*/
