--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,24 +9,23 @@ body {
 }
 
 .markdown-body {
-  /*position: relative;*/
+  position: relative;
   background-color: #fff;
   box-shadow: 0 0 3px #000;
   padding: 30px 40px !important;
 }
 
-/*
 .markdown-body::after {
   display: block;
   content: "";
-  background: url("../images/logo.png") no-repeat top right;
-  background-size: 50%;
+  background-color: #91d370;
+  background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
   opacity: 0.2;
   top: 0;
   left: 0;
-  bottom: 0;
+  bottom: auto;
+  height: 100px;
   right: 0;
   position: absolute;
   z-index: 0;
 }
-*/
