--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,12 +9,28 @@ body {
 }
 
 .markdown-body {
-  position: relative;
+  /*position: relative;*/
   background-color: #fff;
   box-shadow: 0 0 3px #000;
   padding: 30px 40px !important;
 }
 
+.markdown-body h1 {
+  position: absolute;
+  height: 100px;
+  background-color: #91d370;
+  background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
+  top: 2px;
+  left: 2px;
+  bottom: auto;
+  right: 2px;
+}
+
+.markdown-body h1 a {
+  color: #fff;
+}
+
+/*
 .markdown-body::after {
   display: block;
   content: "";
@@ -29,3 +45,4 @@ body {
   position: absolute;
   z-index: 0;
 }
+*/
