--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,7 +9,7 @@ body {
 }
 
 .markdown-body {
-  /*position: relative;*/
+  position: relative;
   background-color: #fff;
   box-shadow: 0 0 3px #000;
   padding: 30px 40px !important;
@@ -24,11 +24,15 @@ body {
   left: 2px;
   bottom: auto;
   right: 2px;
+  text-align: center;
 }
 
-.markdown-body h1 a {
+.markdown-body h1 a,
+.markdown-body h1 a:hover {
   color: #fff;
+  text-decoration: none;
 }
+
 
 /*
 .markdown-body::after {
