--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -12,12 +12,12 @@ body {
   position: relative;
   background-color: #fff;
   box-shadow: 0 0 3px #000;
-  padding: 30px 40px !important;
+  padding: 90px 40px !important;
 }
 
 .markdown-body h1 {
   position: absolute;
-  height: 100px;
+  height: 80px;
   background-color: #91d370;
   background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
   top: 2px;
@@ -25,14 +25,19 @@ body {
   bottom: auto;
   right: 2px;
   text-align: center;
+  line-height: 78px;
 }
 
-.markdown-body h1 a,
+.markdown-body h1 a {
+  color: #fff;
+  text-decoration: none;
+  content: "vtiger"
+}
+
 .markdown-body h1 a:hover {
   color: #fff;
   text-decoration: none;
 }
-
 
 /*
 .markdown-body::after {
